<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewLeftP009"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewRightP009"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:onClick="onClickMtdP009"/>
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="250px"
    android:id="@+id/relativeLayoutP009"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:onClick="onClickMtd2P009"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout2P009"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/darken"
        android:onClick="onClickMtd3P009"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout3P009"/>
</LinearLayout>