<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewLeftP010"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewRightP010"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dst"
        android:onClick="onClickMtdP010"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayoutP010"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dst_atop"
        android:onClick="onClickMtd2P010"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout2P010"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lighten"
        android:onClick="onClickMtd3P010"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout3P010"/>
</LinearLayout>