<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewLeftP012"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewRightP012"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/src_in"
        android:onClick="onClickMtdP012"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayoutP012"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/src_out"
        android:onClick="onClickMtd2P012"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout2P012"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/src_over"
        android:onClick="onClickMtd3P012"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250px"
        android:id="@+id/relativeLayout3P012"/>
</LinearLayout>